--- a/4dvop-app/nginx/Dockerfile
+++ b/4dvop-app/nginx/Dockerfile
@@ -1,5 +1,7 @@
 FROM ubuntu
 MAINTAINER Alexandre Lion (dev@alexandrelion.com)
+ENV TZ=Europe/Paris
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 RUN apt-get update \
     && apt-get install -y nginx git
 RUN rm -Rf /var/www/html/*
